# Groq-Ai-chatBot-Backend-using-Django-Django-REST-Framework

./: .gitignore  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  db.sqlite3  main.py  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
analytics/: urls.py  views.py
chat/: __init__.py  admin.py  groq_client.py  models.py  serializers.py  signals.py  throttles.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_dailyreport_message_response_time.py
core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
reports/: tasks.py  urls.py  views.py
