[project]
name = "ai-chat-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.4",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "groq>=1.2.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
]
